# ilic-fork

./: .gitattributes  .gitignore  CMakeLists.txt  THIRD_PARTY_NOTICES.md  readme.md
.github/workflows/: build-native-release.yml  ci.yml  publish-npm-snapshot.yml
cmake/: IlicDependencies.cmake  IlicStaticDistribution.cmake  check_parser_regeneration.cmake  run_compile_json_test.cmake  run_ilic_domain_roundtrip.cmake  run_ilic_generic_roundtrip.cmake  run_ilic_regression.cmake  run_ilic_translation_roundtrip.cmake  run_ilic_xsd_smoke.cmake
doc/: help.txt
doc/dev/: conformance.md  embedding.md  readme.md
docs/: README.md  build-und-installation.md  build-und-publikationspipeline.md  cli.md  conformance.md  diagnostik-und-logging.md  formatter.md  funktionsumfang.md  language-tooling-snapshots.md  native-api.md  npm-publikation.md  repositories.md  wasm.md
docs/examples/: README.md  c-api.c  cli.sh  cpp-session.cpp  wasm-repository.mjs  wasm-session.mjs
docs/examples/models/: Base.ili  Example.ili  Invalid.ili  Legacy.ili
include/ilic/: Compiler.h  Diagnostic.h  Formatter.h  Repository.h  Semantic.h  SourceManager.h  Syntax.h  capi.h
schemas/: compilation-request-v1.schema.json  compilation-result-v1.schema.json  format-request-v1.schema.json  format-result-v1.schema.json
scripts/: build-wasm.sh  check-linux-static.sh  check-macos-runtime-deps.sh  check-windows-runtime-deps.ps1  prepare-npm-snapshot.mjs  test-npm-packages.mjs
source/abi/: Capi.cpp  Json.cpp  Json.h
source/core/: Compiler.cpp  Formatter.cpp  Semantic.cpp  SourceManager.cpp  Syntax.cpp
source/input/ili1/: Ili1Input.cpp  Ili1Input.h  Ili1Input_package.cpp
source/input/ili2/: Ili2Input.cpp  Ili2Input.h  Ili2Input_assoc.cpp  Ili2Input_class.cpp  Ili2Input_constraint.cpp  Ili2Input_expression.cpp  Ili2Input_function.cpp  Ili2Input_graphic.cpp  Ili2Input_helper.cpp  Ili2Input_helper.h  Ili2Input_package.cpp  Ili2Input_path.cpp  Ili2Input_type.cpp  Ili2Input_unit.cpp  Ili2Input_view.cpp
source/input/parser/: IliParserErrorListener.cpp
source/input/parser/grammar/: Ili2Lexer.l4  Ili2Parser.g4
source/main/: RepositoryCli.cpp  RepositoryCli.h  ilic.cpp  ilic_format.cpp
source/metamodel/: MetaModel.cpp  MetaModel.h  MetaModelInput.cpp  MetaModelInput.h  MetaModelOutput.cpp  MetaModelTreeVisitor.cpp  SemanticChecker.cpp  SemanticChecker.h  TranslationChecker.cpp  TranslationChecker.h
source/metamodel/bck2/: MetaModel.cpp
source/output/: GmlOutput.cpp  Ili2Output.cpp  Ili2Output.h  XsdOutput.cpp
source/repository/: Md5.cpp  Md5.h  Repository.cpp  RepositoryCache.cpp  RepositoryCache.h  RepositoryCrawler.cpp  RepositoryCrawler.h  RepositoryResourceLoader.cpp  RepositoryResourceLoader.h  RepositoryTransport.cpp  RepositoryTransport.h  RepositoryUri.cpp  RepositoryUri.h  RepositoryVersion.cpp  RepositoryVersion.h  RepositoryXml.cpp  RepositoryXml.h
source/util/: Converter.cpp  IliFile.cpp  IliFile.h  Logger.cpp  Logger.h  StringUtil.cpp  StringUtil.h  XMLWriter.h  XTFWriter.h  os.cpp
test/abi/: CapiTest.cpp
test/core/: CompilerSessionTest.cpp  FormatterTest.cpp  SemanticSnapshotTest.cpp  SyntaxSnapshotTest.cpp
test/docs/: DocumentationTest.mjs
test/ili23/Roads/: RoadsExdm2ien.ili  RoadsExgm2ien.ili
test/ili23/core/: DatasetIdx16.ili
test/npm/: PrepareNpmSnapshotTest.mjs
test/regression/ili1/: numeric_range_invalid.ili
test/regression/ili23/: abstract_view_in_concrete_topic_valid.ili  association_cardinality_invalid.ili  association_duplicate_role_invalid.ili  association_roles_valid.ili  association_strength_invalid.ili  association_target_invalid.ili  association_visibility_invalid.ili  attribute_cardinality_invalid.ili  attribute_extension_valid.ili  attribute_path_class.ili  attribute_path_non_class.ili  attribute_type_extension_invalid.ili  class_end_name_invalid.ili  class_extended_with_inherited_specialization_invalid.ili  class_extended_with_local_specialization_invalid.ili  class_same_name_extends_invalid.ili  class_specialization_valid.ili  declaration_namespaces_valid.ili  enum_extension_invalid.ili  enum_extension_valid.ili  existence_topic_dependency_invalid.ili  existence_types_invalid.ili  existence_types_valid.ili  expression_boolean_invalid.ili  expression_boolean_valid.ili  expression_relations_invalid.ili  expression_relations_valid.ili  graphic_topic_dependency_invalid.ili  inherited_abstract_class_concretized_valid.ili  inherited_abstract_class_invalid.ili  lexer_malformed_scaling.ili  lexer_nested_comment.ili  lexer_scaling_name.ili  lexer_unterminated_comment.ili  line_overlap_invalid.ili  line_overlap_valid.ili  model_end_name_invalid.ili  model_import_metadata_invalid.ili  model_import_unit_invalid.ili  model_imports_valid.ili  (+29 more)
test/regression/ili23/translation_loading/: BaseModel.ili  TranslatedModel.ili
test/regression/ili24/: date_time_types.ili  domain_constraints_invalid.ili  domain_constraints_valid.ili  expression_arithmetic_invalid.ili  expression_arithmetic_valid.ili  generic_context_dimension_invalid.ili  generic_context_missing_invalid.ili  generic_context_non_generic_invalid.ili  generic_context_range_invalid.ili  generic_context_refinement_invalid.ili  generic_context_transitive_import_valid.ili  generic_contexts_valid.ili  generic_deferred_missing_invalid.ili  generic_deferred_nested_valid.ili  generic_deferred_unknown_invalid.ili  generic_deferred_unused_invalid.ili  generic_nested_deferred_missing_invalid.ili  list_of_text.ili  numeric_range_invalid.ili  unique_basket_global_valid.ili  unique_basket_local_invalid.ili
test/repository/: RepositoryCacheTest.cpp  RepositoryCliTest.cpp  RepositoryIntegrationTest.cpp  RepositoryTest.cpp  RepositoryTraversalTest.cpp  RepositoryUriTest.cpp  RepositoryVersionTest.cpp  RepositoryXmlTest.cpp
test/repository/fixture/: RepositoryBase.ili  RepositoryRoot.ili  ilimodels.xml
test/repository/fixtures/integration/: Base.ili  Browsable.ili  CycleA.ili  CycleB.ili  Language23.ili  Language24.ili  Root29.ili  Shared.ili  expected.json  (+1 more)
test/repository/import-fallback/: RepositoryConsumer.ili
